# newsletter-server

./: .gitignore  :  Cargo.toml  Dockerfile  README.md
.cargo/: config
config/: base.yaml  local.yaml  production.yaml
migrations/: 20230806001556_add_status_to_subscriptions.sql  20230806002351_make_status_not_null_in_subscriptions.sql  20230806002823_create_subscription_tokens_table.sql  20230813195757_create_users_table.sql  20230818131447_seed_user.sql  20230823001000_create_idempotency_table.sql  20230829080230_create_newsletter_issues_table.sql  20230829080321_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  config.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs  log.json  log2.json
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
