[package]
name = "zero2prod"
version = "0.1.0"
author = "Rayene Nassim Zorgani <jr_zorgani@esi.dz>"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
native-tls = { version = "0.2", default-features = false }
reqwest = "0.11"
serde = {version = "1", features=["derive"]}
tokio ={version = "1", features= ["macros", "rt-multi-thread"]}
config = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"
unicode-segmentation = "1"
validator = "0.16"

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"]

[dev-dependencies]
once_cell = "1.17.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
fake = "2.5.0"
claim = "0.5"
