[package]
name = "zero2prod"
version = "0.1.0"
author = "Rayene Nassim Zorgani <jr_zorgani@esi.dz>"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
native-tls = { version = "0.2", default-features = false }
serde = {version = "1", features=["derive"]}
tokio ={version = "1", features= ["macros", "rt-multi-thread"]}
config = "0.13"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"
unicode-segmentation = "1"
validator = "0.16"
serde-aux = "4.2.0"
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0.44"
anyhow = "1.0.72"
base64 = "0.21.2"
argon2 = { version = "0.5.1", features = ["std"] }
urlencoding = "2.1.3"
htmlescape = "0.3.1"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
serde_json = "1"
actix-web-lab = "0.19.1"



[dev-dependencies]
tokio = {version= "1", features = ["rt", "macros"]}
once_cell = "1.17.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
fake = "2.5.0"
claim = "0.5"
wiremock = "0.5.18"
linkify = "0.10.0"
